Prevent flashing with visibility styles for themes

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+/* To prefent flashing */
+html:not([data-theme]) {
+    visibility: hidden;
+}
+
+html[data-theme] {
+    visibility: visible;
+}
+
 /* CSS Variables for theme switching */
 :root {
     --bg-color: #ffffff;
